--- a/PoliginBase/PoliginBase/Views/Shared/_Layout.cshtml
+++ b/PoliginBase/PoliginBase/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Cat", "Cat", "Home")</li>
-                            <li>@Html.ActionLink("New Problem", "NewProblem", "CreateProblem")</li>
+                            <li>@Html.ActionLink("New Problem", "Index", "Problem")</li>
                         </ul>
                     </nav>
                 </div>
